# LLM-Semester-Project

./: .gitignore  CLAUDE.md  PROJECT_REPORT.md  README.md  api.py  app.py  chat_history.db  clear_neo4j.py  db.py  document_ingestion.py  eval_answer_relevancy.py  eval_rag_report.json  eval_rag_simple.py  evaluate_rag_retrieval.py  guardrails_service.py  ingest.py  ingest_markdown_kg.py  ingest_qa_rag.py  knowledge_graph.py  main.py  pyproject.toml  qa_extractor.py  rag.py  ragas_report.json  settings.py
.claude/: settings.local.json
.github/: copilot-instructions.md
Codebase/: app.py  chat_history.db  main.py  qa_openai.py
Codebase/sheets_markdown/: sheet_HOME REMITTANCE.md  sheet_Main.md  sheet_NAA.md  sheet_NADRA.md  sheet_NMC.md  sheet_NMF.md  sheet_NSA.md  sheet_NSDA.md  sheet_NUF.md  sheet_NUST4Car.md  sheet_NWA.md  sheet_Nust Life.md  sheet_PF.md  sheet_RDA.md  sheet_Sheet1.md  sheet_VP-BA.md  sheet_VPBA.md  sheet_VPCA.md
Codebase/sheets_qa/: qa_ESFCA.json  qa_LCA.json  qa_Main.json  qa_NAA.json  qa_NADRA.json  qa_NFBF.json  qa_NFDA.json  qa_NMA.json  qa_NMC.json  qa_NSA.json  qa_NSF.json  qa_NUF.json  qa_Nust Life.json  (+7 more)
chroma_db/: chroma.sqlite3
docs/: ARCHITECTURE.md  README.md  SRS.md
finetuning/: eda_dataset.ipynb  finetune_config.yaml  finetune_qwen_qlora.ipynb  full_pipeline.py  merge_lora.py  qlora_config.yaml
sheets_markdown/: sheet_CDA.md  sheet_EFU Life.md  sheet_ESFCA.md  sheet_Jubilee Life.md  sheet_LCA.md  sheet_NADA.md  sheet_NFBF.md  sheet_NFDA.md  sheet_NFMF.md  sheet_NHF.md  sheet_NIF.md  sheet_NMA.md  sheet_NRF.md  sheet_NSF.md  sheet_PLS.md  sheet_PMYB &ALS.md  sheet_PWRA.md  sheet_Rate Sheet July 1 2024.md
sheets_qa/: qa_CDA.json  qa_EFU Life.json  qa_HOME REMITTANCE.json  qa_Jubilee Life.json  qa_NADA.json  qa_NFMF.json  qa_NHF.json  qa_NIF.json  qa_NMF.json  qa_NRF.json  qa_NSDA.json  qa_NUST4Car.json  qa_NWA.json  qa_PF.json  qa_Rate Sheet July 1 2024.json
templates/: index.html
(+4 files in other folders)
