[project]
name = "llm-semester-project"
version = "0.1.0"
description = "Local LangGraph RAG chatbot for banking Q&A using FastAPI, Ollama, and Chroma"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.2",
    "fastapi>=0.135.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.3.0",
    "langchain-core>=1.2.17",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "tqdm>=4.66.0",
    "uvicorn>=0.41.0",
]
